# sherlock-service

./: .air.toml  .gitignore  .npmrc  COMPLETED_FEATURES.md  LOCAL_TESTING.md  Makefile  NEXT_PHASE.md  PHASE3_STATUS.md  PRODUCTION_CHECKLIST.md  TROUBLESHOOTING_502.md  env.example  go.mod  go.sum  package-lock.json  package.json  update-ec2-monorepo.sh
.github/workflows/: deploy-ecs-advanced.yml  deploy-simple.yml  deploy.yml  ecr-cleanup.yml
backend/: .env.example  go.mod  go.sum
cmd/worker/: main.go
docker/: Dockerfile  Dockerfile.worker  docker-compose.build.yml  docker-compose.ecr.yml  docker-compose.t3micro.yml  docker-compose.yml  redis.conf
docs/: ACTION_PLAN.md  ADMIN_SETUP.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SETUP.md  EC2_QUICK_FIX.md  ECS_IAM_ARNS.md  HOW_TO_GET_ECR_REGISTRY.md  NEXT_STEPS_GUIDE.md  SSH_KEY_SETUP.md
ecs/: task-definition-server.json  task-definition-worker.json
frontend/: .env.example  .env.production  .eslintrc.cjs  index.html  package-lock.json  package.json  sherlock-service.code-workspace  vite.config.ts
frontend/src/: App.vue  main.ts
internal/api/: auth.go  handler.go  health.go  middleware.go
internal/commands/: handlers.go  parser.go
internal/config/: config.go
internal/database/: reviews.go  usage.go
internal/plan/: plan.go
internal/queue/: queue.go
internal/types/: types.go
rust-indexer/: .gitignore  Cargo.toml  Dockerfile
rust-indexer/src/: main.rs  parser.rs  symbol.rs
scripts/: setup-db.sql
scripts/migrations/: 001_add_performance_indexes.sql  002_add_codebase_indexing.sql
(+92 files in other folders)
