[package]
name = "sherlock-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tree-sitter for AST parsing
tree-sitter = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-cpp = "0.21"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# File handling
walkdir = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

